--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/material": "^5.10.7",
     "gatsby": "^4.23.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
