--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@mui/material": "^5.10.7",
     "gatsby": "^4.23.1",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react-dom": "^18.1.0",
+    "react-resize-detector": "^7.1.2"
   },
   "devDependencies": {
     "prettier": "^2.7.1"
