--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gatsby": "^5.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^8.0.7",
     "react-resize-detector": "^9.1.0"
   },
   "devDependencies": {
