--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@herob/gatsby-plugin-react-i18next": "^3.0.8",
     "@mui/icons-material": "^5.14.8",
     "@mui/material": "^5.14.8",
     "gatsby": "^5.12.4",
