--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
   },
   "dependencies": {
     "@emotion/styled": "^11.11.0",
+    "@herob/gatsby-plugin-react-i18next": "^3.0.8",
     "@mui/icons-material": "^5.14.9",
     "@mui/material": "^5.14.9",
     "gatsby": "^5.12.4",
-    "@herob/gatsby-plugin-react-i18next": "^3.0.8",
+    "gatsby-adapter-netlify": "^1.0.1",
     "gatsby-source-filesystem": "^5.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
