--- a/package.json
+++ b/package.json
@@ -28,7 +28,11 @@
     "react-resize-detector": "^9.1.0"
   },
   "devDependencies": {
-    "prettier": "^3.0.0"
+    "@types/node": "^20.6.3",
+    "@types/react": "^18.2.22",
+    "@types/react-dom": "^18.2.7",
+    "prettier": "^3.0.0",
+    "typescript": "^5.2.2"
   },
   "repository": {
     "type": "git",
